# DVS-ENACT

./: .gitignore  .jscpd.json  .resume-manifest-patch-trigger  CITATION.cff  README.md  pyproject.toml
.github/: actionlint.yaml
docs/: eventvot_confidence_gate_replay.md  paper_artifact_pipeline.md  tracking_benchmark_roadmap.md
patches/: dvs_enact_acceptance_gates.patch
scripts/: eventvot_multihypothesis_core.py  eventvot_multihypothesis_scoring.py  eventvot_support_score.py  export_paper_artifacts.py  mevdt_cli_common.py  report_eventvot_comparisons.py  report_eventvot_refinement_diagnostics.py  report_utils.py  run_eventvot_acceptance_replay.py  run_eventvot_confidence_gate_replay.py  run_eventvot_confidence_memory.py  run_eventvot_learned_acceptance.py  run_eventvot_multihypothesis_refinement.py  run_eventvot_point_process_refinement.py  run_eventvot_refinement.py  run_eventvot_refinement_modes.py  run_eventvot_replay_projection_sweep.py  run_eventvot_validation_sweep.py  run_mevdt_filtered_tracker_sweep.py  run_mevdt_support_diagnostics.py  run_mevdt_tracker_comparison.py  run_synthetic_count_evaluation.py  run_synthetic_cube_activity.py  run_synthetic_tracker_comparison.py
tests/: test_active_contour.py  test_event_likelihood.py  test_eventvot_acceptance_replay.py  test_eventvot_comparison_report.py  test_eventvot_confidence_gate_replay.py  test_eventvot_confidence_memory.py  test_eventvot_frame_timestamps.py  test_eventvot_learned_acceptance.py  test_eventvot_multihypothesis.py  test_eventvot_point_process_refinement.py  test_eventvot_refinement.py  (+15 more)
(+20 files in other folders)
