[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dvs-enact"
version = "0.1.0"
description = "DVS-ENACT: event-based normal-flow active contour tracking for extended objects."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy",
    "matplotlib",
    "pyrecest @ git+https://github.com/FlorianPfaff/PyRecEst.git",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
